# argus

./: .env.example  .gitignore  Dockerfile.ai  Dockerfile.api  Dockerfile.dashboard  MANIFEST.in  README.md  argus.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
agent/: README.md  __init__.py  __main__.py  agent_config.json  config.py  connection.py  executor.py  run.py  scanner.py  venv_resolver.py
agent/scripts/: logger-agent.desktop  start_logger_agent.sh
ai/: .gitignore  README.md  dbhub.toml  main.py  requirements.txt  serve.py
ai/prompts/: system.md
ai/scripts/: start_dbhub.sh
ai/src/: __init__.py  config.py
db/: schema.sql
docs/: README.md  advanced_config.md  api_reference.md  architecture.md  changelog.md  developer_guide.md  examples.md  installation.md  performance.md  quickstart.md  remote_api.md  security.md  start_logger_from_config.md  tests.md  troubleshooting.md
docs/project/: README.md  agent-runtime.md  ai-assistant.md  backend-api.md  data-model.md  endpoints-and-flows.md  frontend-dashboard.md  frontend-screen-inventory.md  infrastructure-and-ops.md  logger-core.md
docs/source/: conf.py  index.rst  usage.rst
logger/: __init__.py  __init__.pyi
logger/cli/: demo.py
logger/core/: context.py  logger_core.py
nginx/: logger_nginx.conf
remote_api/: __init__.py  auth_schema.py  branding.py  config.py  control_schema.py  crud.py  database.py  email_schema.py  main.py  messaging.py  models.py  retention.py  schemas.py  storage.py  ws_manager.py
remote_dashboard/: __init__.py  api_proxy.py  config.py  http_client.py  main.py  requirements.txt
scripts/: create_admin.py  purge_logger_queues.py  seed_demo_data.py
(+116 files in other folders)
